<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">pZik</string>
    <string name="activity2">Music streamer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="search_message">Enter Artist/song name!</string>
    <string name="button_send">Search</string>
    <string name="playing">Title : </string>
    <string name="playSong">Currently playing : </string>
    <string name="duration">Duration : </string>
    <string name="size">Size : </string>
    <string name="quality">Quality : </string>
    <string name="default_string">Unknown</string>
    <string name="icon_dec">Music Icon</string>
    <string name="playlist">Add to favorite</string>
    <string name="download">Download Song</string>
    <string name="echec">Song/Artist not found, Try another search!</string>
    

</resources>